  negative numbers if bit 7 was set. Thank you to BeeBS.ddns.net for their
  help with tracking this down.
- BASIC: Fixed a bug importing Russell-format tokenised BASIC where tokens
  were incorrectly decoded.
- BASIC: RUN recursion limit removed, it's now implemented with a
  setjmp/longjmp.
- BASIC: EVAL stops at unexpected input without error (like Acorn BASIC),
  unless Strict mode is set.

* 1.23.0 - 06 February 2024
- System: Add '-tek' (or -t) option to enable Tek graphics for 'tbrandy'
  on compatible platforms. Equivalent to issuing SYS"Brandy_TekEnabled",1
- System: Strict mode can now be set programmatically with SYS"Brandy_Strict".
- System: Strip quotes from filenames in *LOAD and *SAVE
- System: Implemented OSWORDs 1 and 2
- System: Fix file name bug in OSFILE.
- System: Filename translation between RISC OS and Linux for OPENIN,
  OPENOUT and OPENUP.
- System: Added "-nofull" command line option, to disable switching into
  full-screen mode (for questionable hardware, e.g. Poulsbo chipsets)
- System: Do not hang on text build startup when console doesn't handle
  the ANSI sequence to report the cursor location (e.g. Minix3 console),
  instead time out after 0.5 seconds.
- MOS: *Refresh, *WinTitle and *FullScreen are now recognised on RISC OS
  builds, but do nothing. (Previously, they raised a "Not Found" error.)
  This is to allow programs written targeting other platforms a better
  chance to run correctly under RISC OS without further modification.
- MOS: OSBYTEs 42-44 deprecated, use 163,2-4 instead.
- BASIC: LOCAL with no parameters now does nothing (as per Acorn) instead
  of reporting an error. This new behaviour is in place on a DEFAULT_IGNORE
  build unless -strict is set, or if -ignore is set.  This can also be
  toggled at runtime with SYS"Brandy_Strict".
- BASIC: If Strict option is set, warnings are handled as fatal errors if
  a program is running.
- BASIC: Limit the recursion depth of RUN.